--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -252,14 +252,8 @@ jobs:
       - name: Setup env
         run: cp .local.env.dist .local.env
 
-      - name: Build extension
-        run: cp apps/browser-extension/.local.env.dist apps/browser-extension/.env && npx nx build browser-extension --prod
-
-      - name: Start api
-        run: npx nx run api:serve-docker
-
       - name: Test
-        run: xvfb-run --auto-servernum -- npx nx run browser-extension-e2e:e2e
+        run: nx run browser-extension-e2e:e2e-docker
 
       - name: Write API logs
         run: docker-compose -f docker-compose.prod.yml logs api > api-logs.log
