ci: output versions

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,6 +31,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Output docker-compose version
+        run: docker-compose --version
+
+      - name: Output docker version
+        run: docker --version
+
       - uses: hashicorp/setup-terraform@v1
 
       - name: Set Node.js 16.x
