ci: fix command

--- a/apps/browser-extension-e2e/docker/Dockerfile
+++ b/apps/browser-extension-e2e/docker/Dockerfile
@@ -3,8 +3,7 @@ WORKDIR /app
 
 RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && \
     apt-get update -y && \
-    apt-get install -y xvfb && \
-    apt install chromium -y
+    apt-get install -y xvfb
 
 COPY ./package.json ./package-lock.json ./workspace.json ./tsconfig.json ./tsconfig.base.json ./tsconfig.node.json ./.eslintrc.json ./babel.config.json ./nx.json ./codegen.yml ./jest.preset.js /jest.config.js ./
 
@@ -15,6 +14,7 @@ COPY ./tools ./tools
 COPY ./tests ./tests
 
 RUN npm ci
+RUN npx playwright install-deps
 RUN npm run gql-codegen
 RUN npm run build:tools
 RUN npx nx run browser-extension:build:production
