chore: Add missing e2e dir

--- a/apps/browser-extension-e2e/docker/Dockerfile
+++ b/apps/browser-extension-e2e/docker/Dockerfile
@@ -9,13 +9,13 @@ RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key
 COPY ./package.json ./package-lock.json ./workspace.json ./tsconfig.json ./tsconfig.base.json ./tsconfig.node.json ./.eslintrc.json ./babel.config.json ./nx.json ./codegen.yml ./jest.preset.js /jest.config.js ./
 
 COPY ./apps/browser-extension ./apps/browser-extension
+COPY ./apps/browser-extension-e2e ./apps/browser-extension-e2e
 COPY ./libs ./libs
 COPY ./typings ./typings
 COPY ./tools ./tools
 COPY ./tests ./tests
 
 RUN npm ci
-RUN npx playwright install-deps
 RUN npm run gql-codegen
 RUN npm run build:tools
 RUN npx nx run browser-extension:build:production
