test: Create screenshot on page error

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -278,5 +278,11 @@ jobs:
       - uses: actions/upload-artifact@v2
         if: ${{ failure() }}
         with:
-          name: test-artifact
+          name: api-logs
           path: api-logs.log
+
+      - uses: actions/upload-artifact@v2
+        if: ${{ failure() }}
+        with:
+          name: test-artifact
+          path: artifacts
