--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "lodash.mapvalues": "^4.6.0",
     "lodash.set": "^4.3.2",
     "node-fetch": "^3.0.0",
-    "notistack": "^2.0.1-alpha.5",
+    "notistack": "^2.0.2",
     "p-limit": "^3.1.0",
     "p-pipe": "^3.1.0",
     "pg": "^8.5.1",
