chore: Restore envs

--- a/apps/browser-extension/.local.env.dist
+++ b/apps/browser-extension/.local.env.dist
@@ -1,2 +1,2 @@
-NX_API_URL=http://api:3000
-NX_SECURITY_URL=http://security:50050
+NX_API_URL=http://localhost:3000
+NX_SECURITY_URL=http://localhost:50050
