--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -147,8 +147,7 @@ jobs:
           command: up
           stack-name: development
           work-dir: ./deploy
-        env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+          cloud-url: file://~
 
       - name: Setup env
         run: cp .local.env.dist .local.env
@@ -236,8 +235,7 @@ jobs:
           command: up
           stack-name: development
           work-dir: ./deploy
-        env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+          cloud-url: file://~
 
       - name: Setup env
         run: cp .local.env.dist .local.env
@@ -291,8 +289,7 @@ jobs:
           command: up
           stack-name: development
           work-dir: ./deploy
-        env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+          cloud-url: file://~
 
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v1
