--- a/apps/browser-extension-e2e/docker/Dockerfile
+++ b/apps/browser-extension-e2e/docker/Dockerfile
@@ -1,23 +1,13 @@
-FROM node:16.10.0
+FROM ghcr.io/theunderscorer/scrapper-gate-base:latest
 WORKDIR /app
 
-RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && \
-    apt-get update -y && \
+RUN apt-get update -y && \
     apt-get install -y xvfb && \
     apt install chromium -y
 
-COPY ./package.json ./package-lock.json ./workspace.json ./tsconfig.json ./tsconfig.base.json ./tsconfig.node.json ./.eslintrc.json ./babel.config.json ./nx.json ./codegen.yml ./jest.preset.js /jest.config.js ./
-
 COPY ./apps/browser-extension ./apps/browser-extension
 COPY ./apps/browser-extension-e2e ./apps/browser-extension-e2e
-COPY ./libs ./libs
-COPY ./typings ./typings
-COPY ./tools ./tools
-COPY ./tests ./tests
 
-RUN npm ci
-RUN npm run gql-codegen
-RUN npm run build:tools
 RUN npx nx run browser-extension:build:production
 
 RUN export DISPLAY=:99
