--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,6 +7,9 @@ services:
     build:
       context: .
       dockerfile: apps/browser-extension-e2e/docker/Dockerfile
+      args:
+        NX_API_URL: http://api:3000
+        NX_SECURITY_URL: http://security:50050
     environment:
       SERVER_URL: http://api:3000
       NX_API_URL: http://api:3000
