--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,8 +45,12 @@ jobs:
       - name: Setup deps
         run: npm install ts-node -g && npm ci
 
+      - uses: nelonoel/branch-name@v1.0.1
+      # Use branch name for whatever purpose
+      - run: echo ${BRANCH_NAME}
+
       - name: Maybe build base image
-        run: TS_NODE_PROJECT=tools/tsconfig.tools.json ts-node tools/scripts/maybeRebuildBaseImage.ts
+        run: TS_NODE_PROJECT=tools/tsconfig.tools.json ts-node tools/scripts/maybeRebuildBaseImage.ts --create-docker-builder=true --branch=${BRANCH_NAME}
 
   build:
     needs:
