--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -322,16 +322,8 @@ jobs:
       - name: Setup env
         run: cp .local.env.dist .local.env
 
-      - name: Setup extension env
-        run: cp apps/browser-extension/.local.env.dist apps/browser-extension/.env
-
-      - name: Make envfile
-        uses: SpicyPizza/create-envfile@v1
-        with:
-          envkey_NX_API_URL: "http://api:3000"
-          envkey_NX_SECURITY_URL: "http://security:50050"
-          directory: apps/browser-extension
-          file_name: .local.env
+      - name: Build extension
+        run: cp apps/browser-extension/.local.env.dist apps/browser-extension/.env && npx nx build browser-extension --prod
 
       - name: Test
         run: npx nx run browser-extension-e2e:e2e-docker
