chore: Fix api docker build

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -322,8 +322,8 @@ jobs:
       - name: Setup env
         run: cp .local.env.dist .local.env
 
-      - name: Build extension
-        run: cp apps/browser-extension/.local.env.dist apps/browser-extension/.env && npx nx build browser-extension --prod
+      - name: Setup extension
+        run: cp apps/browser-extension/.local.env.dist apps/browser-extension/.env
 
       - name: Test
         run: npx nx run browser-extension-e2e:e2e-docker
