--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -17,12 +17,6 @@ services:
       NX_SECURITY_URL: http://security:50050
     command: [sh, -c, "xvfb-run --auto-servernum -- npx nx run browser-extension-e2e:e2e"]
     volumes:
-      - ./apps/browser-extension-e2e:/app/apps/browser-extension-e2e
-      - ./dist/apps/browser-extension:/app/dist/apps/browser-extension
-      - ./tests:/app/tests
-      - ./libs:/app/libs
-      - ./jest.config.js:/app/jest.config.js
-      - ./jest.preset.js:/app/jest.preset.js
       - ./artifacts:/app/artifacts
     depends_on:
       - api
@@ -54,9 +48,7 @@ services:
       AWS_ACCESS_KEY_ID: test
       AWS_SECRET_ACCESS_KEY: test
       AWS_SQS_ENDPOINT_URL: http://localstack:4566
-      AWS_SQS_SCRAPPER_CHROMIUM_QUEUE_URL: http://localstack:4566/000000000000/development-scrapper-chromium.fifo
-      AWS_SQS_SCRAPPER_WEBKIT_QUEUE_URL: http://localstack:4566/000000000000/development-scrapper-webkit.fifo
-      AWS_SQS_SCRAPPER_MOZILLA_QUEUE_URL: http://localstack:4566/000000000000/development-scrapper-mozilla.fifo
+      AWS_SQS_SCRAPPER_CHROMIUM_QUEUE_URL: http://localstack:4566/000000000000/development-scrapper-chromium
       AWS_SQS_MESSAGE_TEST_QUEUE_URL: http://localstack:4566/000000000000/development-message-queue-test.fifo
       AWS_SQS_API_VERSION: "2012-11-05"
       REDIS_HOST: redis
