--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -25,6 +25,12 @@ services:
     networks:
       - app
     command: [sh, -c, "node apps/api/src/main.js"]
+    healthcheck:
+      test: [CMD, "curl", "-f", "http://localhost:3000/health"]
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     environment:
       APP_NAME: scrapper-gate
       DB_USER: postgres
