chore: Fix builds

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "start-local-env": "node scripts/startLocalEnv.mjs"
   },
   "private": true,
+  "sideEffects": false,
   "dependencies": {
     "@apollo/client": "^3.3.14",
     "@date-io/date-fns": "^1.3.13",
@@ -51,13 +52,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "npm:@mui/material@5.0.0",
+    "@material-ui/core": "npm:@mui/material@5.0.6",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
-    "@mui/icons-material": "5.0.0",
-    "@mui/lab": "^5.0.0-alpha.47",
-    "@mui/material": "5.0.0",
-    "@mui/styles": "5.0.0",
-    "@mui/system": "^5.0.0",
+    "@mui/icons-material": "5.0.4",
+    "@mui/lab": "5.0.0-alpha.53",
+    "@mui/material": "5.0.6",
+    "@mui/styles": "5.0.2",
+    "@mui/system": "5.0.6",
     "@theunderscorer/when": "^1.0.1",
     "@tshio/security-client": "^0.0.20",
     "@welldone-software/why-did-you-render": "^6.2.0",
@@ -133,7 +134,7 @@
     "use-query-params": "1.2.3",
     "uuid": "^3.4.0",
     "webextension-polyfill": "^0.8.0",
-    "webpack-bundle-analyzer": "^4.4.1",
+    "webpack-bundle-analyzer": "4.5.0",
     "write-file-webpack-plugin": "^4.5.1",
     "zustand": "^3.3.3"
   },
