--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,13 @@
             ]
           }
         ],
-        "jsx-a11y/accessible-emoji": "off"
+        "jsx-a11y/accessible-emoji": "off",
+        "no-restricted-imports": [
+          "error",
+          {
+            "patterns": ["@mui/*/*/*", "!@mui/material/test-utils/*"]
+          }
+        ]
       }
     },
     {
